refactor: use modern String format